@@ -81,6 +81,7 @@ Verilator 5.037 devel
 * Fix variables declared in fork after taskify (#6126). [Kamil Rakoczy, Antmicro Ltd.]
 * Fix method calls without parenthesis (#6127). [Alex Solomatnikov]
 * Fix `pre_randomize`/`post_randomize` when no randomize (#6128). [Alex Solomatnikov]
+* Fix interface array connections with non-zero low declaration index.
 
 
 Verilator 5.036 2025-04-27
